--- a/apps/myapp/project.json
+++ b/apps/myapp/project.json
@@ -14,6 +14,8 @@
     },
     "serve": {
       "executor": "@nx/js:node",
+      "continuous": true,
+      "dependsOn": ["build"],
       "options": {
         "buildTarget": "@tsmono/myapp:build",
         "watch": true
