--- a/apps/myapp/project.json
+++ b/apps/myapp/project.json
@@ -15,7 +15,7 @@
     "serve": {
       "executor": "@nx/js:node",
       "continuous": true,
-      "dependsOn": ["build"],
+      "dependsOn": ["build", "^build"],
       "options": {
         "buildTarget": "@tsmono/myapp:build",
         "watch": true
